samples/_failures_safe/1761321361_051e2c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b5b90e14.c: In function ‘main’:
./samples/SAFE/__tmp_b5b90e14.c:133:17: error: ‘comp’ undeclared (first use in this function)
  133 |                 comp
      |                 ^~~~
./samples/SAFE/__tmp_b5b90e14.c:133:17: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_b5b90e14.c:133:21: error: expected ‘;’ at end of input
  133 |                 comp
      |                     ^
      |                     ;
./samples/SAFE/__tmp_b5b90e14.c:133:17: error: expected declaration or statement at end of input
  133 |                 comp
      |                 ^~~~
./samples/SAFE/__tmp_b5b90e14.c:133:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_b5b90e14.c:133:17: error: expected declaration or statement at end of input
